# inertial-sense-sdk

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  IMUStage_original.h  IMUStage_updated.h  MIGRATION_GUIDE.md  README.md  README_MIGRATION.md  SUMMARY.md
.github/: copilot-instructions.md
ExampleProjects/Ascii/: CMakeLists.txt  ISAsciiExample.cpp  README.md
ExampleProjects/InertialSense_logger/: ISLoggerExample.cpp  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile
docs/: ZMQ_Interface.md
src/: ISClient.cpp  ISClient.h  ISZmqClient.cpp  ISZmqClient.h  InertialSense.cpp  InertialSense.h
tests/: CMakeLists.txt  test_ISZmqClient.cpp  test_ISZmqTcpBridge.cpp
zmq-tcp-bridge/: CMakeLists.txt  README.md  example_run_bridge.sh
zmq-tcp-bridge/include/: ISZmqTcpBridge.h
zmq-tcp-bridge/src/: ISZmqTcpBridge.cpp  zmq_tcp_bridge_main.cpp
